# AgroBot-Universal-AI-Based-Agricultural-Assistant

./: .env  .gitignore  ARCHITECTURE.md  app.py  move_all.ps1  move_files.py  pyproject.toml  readme.md  requirements.txt
agrobot-inf/: DB_SCHEMA.md  app.py  gemini_helper.py  pyproject.toml
agrobot-inf/static/: style.css
agrobot-inf/templates/: base.html  contact.html  docs.html
agrobot-inf/templates/admin/: analytics.html  system_health.html  view_user.html
data/: agrobot.db  app.db
milestone2/templates/: dashboard.html  notifications.html
milestone3/templates/: base.html  features.html
milestone4/templates/: view_user.html
milestone4/templates/admin/: knowledge_base.html
static/css/: style.css
static/images/: Farm management.avif
templates/: about.html  chat_community.html  market.html  users.html
templates/admin/: users.html
